# bias_subspace_project

./: README.md  config.py  config.yaml  main.py  pyproject.toml
data/: bias_scorer.py  prompts.py  prompts_custom.py  prompts_winobias.py
eval/: metrics.py
experiments/: exp01_baseline_probe.py  exp02_sae_features.py  exp03_cancellation_pairs.py  exp04_causal_ablation.py  exp05_layer_sweep.py  exp06_full_pipeline.py
intervention/: intervene.py
logs/: exp_001_baseline.json  exp_20260426_175530.json  exp_20260427_011319.json  exp_20260427_013940.json
models/: load_model.py  model_utils.py
probe/: train_probe.py
results/tables/: activations.npy  bias_scores.npy  direction_layer6.npy  exp03_cancellation_pairs.csv  exp04_ablation_results.csv  feature_corrs.npy  sae_features_layer6.npy
sae/: sae_model.py
src/cancellation/: cancellation_scorer.py  pair_finder.py  pair_visualizer.py
src/causal/: ablation.py  intervention_eval.py  path_patch.py  resample_abaltion.py
src/probing/: linear_probe.py  pca_probe.py  probe_evaluator.py
src/sae/: feature_annotator.py  feature_extractor.py  sae_loader.py
src/utils/: activation_cache.py  metrics.py  model_loader.py
tests/: test_ablation.py  test_metrics.py
