[project]
name = "bias-subspace-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "torch",
   "numpy",
   "pandas",
   "matplotlib",
   "scikit-learn",
   "tqdm",
   "transformer-lens",
   "sae-lens",
   "pyyaml",
   "pytest"
 ]